@@ -1,3 +1,8 @@
+2003-07-10 claudiuc 
+	* doc: added README.Tom from Thomas Pinz
+	* improvement: added tosh-smcinit.c and tosh-superio.h from Thomas
+	Pinz which will replace the tosh5100-smcinit.c
+	
 2003-07-10 claudiuc 0.3-1 release
 
 2003-07-10 claudiuc 
